[package]
name = "casper-event-toolkit"
edition = "2021"
authors = ["Andrzej Broński <andrzej1_1@o2.pl>"]
version = "0.1.1"

[lib]

[[example]]
name = "cep78_demo"

[dependencies]
casper-client = "2.0.0"
casper-event-standard = "0.5.0"
casper-hashing = "3.0.0"
casper-types = "4.0.1"
hex = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
casper-client = { git = "https://github.com/casper-ecosystem/casper-client-rs" }
casper-hashing = { git = "https://github.com/casper-network/casper-node", branch = "dev" }
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "dev" }
