[package]
name = "casper-event-toolkit"
edition = "2021"
authors = ["Andrzej Broński <andrzej1_1@o2.pl>"]
version = "0.1.1"

[lib]

[[example]]
name = "cep78_demo"

[dependencies]
bincode = "1.3.3"
casper-client = "2.0.0"
casper-client-hashing = { package = "casper-hashing", version = "2.0.0" }
casper-client-types = { package = "casper-types", version = "3.0.0" }
casper-event-standard = "0.5.0"
casper-hashing = "3.0.0"
hex = "0.4"
serde = { version = "1.0", features = ["serde_derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
